--- a/AnalisisNE/Intro.tex
+++ b/AnalisisNE/Intro.tex
@@ -1,18 +1,22 @@
 \section{Introduccion}
 
-Cuando Newton y Leibniz trabajaron en la fundamentación del cálculo, una
-de sus diferencias fue la definición de límite. Mientras Newton lo
-definió de la forma en la que se ha enseñado principalmente, la
-definición $\e$ y $\delta$. Leibniz, lo definia de una forma que
-incluso parece una versión más amigable que la de Newton. Leibniz
-consideraba números infinitamente pequeños, de tal forma que fueran
-menores que cualquier número positivo pero mayores a $0$. Junto con
-números infinitamente grandes, mayores que cualquier número positivo.
+En el análisis, el concepto de límite es uno de sus fundamentos,
+el cual se usa para definir todo tipo de operaciones o hallar
+resultados sobre algún objeto de la teoría, como puede ser una
+función. La definición usual de límite es la conocida
+``$\e$ , $\delta$''. Sin embargo, en los inicios del cálculo,
+Leibniz intentó fundamentar otra definición, la cual consiste en
+usar \emph{infinitesimales}, que son números infinitamente pequeños
+o infinitamente grandes. Dichos números debian comportarse,
+respectivamente, de la siguiente manera:
+un número infinitamente pequeño es menor que todo número real positivo
+pero mayor a $0$, y un número infinitamente grande es mayor que todo
+número real. Leibniz sostenía que dichos números debían mantener las
+mismas propiedades que los números reales, en cierta manera.
 
 El problema de esta definición, se encontró cuando se intentó fundamentar
-formalmente. Cosa que Leibniz ni sus discípulos lograron demostrar.
-La definición de Newton recurre a los mismos números reales ya usados.
-La definición de Leibniz, recurre a una nueva especie de números, los cuales
+formalmente. Cosa que ni Leibniz, ni sus discípulos, lograron.
+Como se mencionó, esta definición recurre a una nueva especie de números, los cuales
 deben ser comparables y se deben poder operar con los reales. La idea entonces
 con esta nueva especie de números, es poder operar con estos, para
 posteriormente tomar el resultado y recuperar la información que interesa,
@@ -23,6 +27,6 @@ presentar esta idea en relación al análisis estándar, específicamente,
 el análisis diferencial.
 
 Los pasos para la construcción de estos números, recurre a los filtros,
-un objeto de la teoría de conjuntos sobre el que se hablará en el
+objetos de la teoría de conjuntos sobre los que se hablará en el
 documento. Con estos, se puede lograr la construcción de esta nueva especie
 de números sobre los reales. 
