--- a/AnalisisNE/Intro.tex
+++ b/AnalisisNE/Intro.tex
@@ -17,16 +17,16 @@ mismas propiedades que los números reales, en cierta manera.
 El problema de esta definición, se encontró cuando se intentó fundamentar
 formalmente. Cosa que ni Leibniz, ni sus discípulos, lograron.
 Como se mencionó, esta definición recurre a una nueva especie de números, los cuales
-deben ser comparables y se deben poder operar con los reales. La idea entonces
-con esta nueva especie de números, es poder operar con estos, para
-posteriormente tomar el resultado y recuperar la información que interesa,
+deben ser comparables y se deben poder operar con los reales. La idea,
+entonces, con esta nueva especie de números, es poder operar con estos,
+para posteriormente, tomar el resultado y recuperar la información que interesa,
 la que corresponde a un valor real estándar. Esta nueva especie de números
 resulta tener aplicaciones en más áreas que el cálculo de límites, sin
 embargo, no hacen parte del objetivo de este proyecto, el cual consta de
 presentar esta idea en relación al análisis estándar, específicamente,
 el análisis diferencial.
 
-Los pasos para la construcción de estos números, recurre a los filtros,
+Los pasos para la construcción de estos números recurre a los filtros,
 objetos de la teoría de conjuntos sobre los que se hablará en el
 documento. Con estos, se puede lograr la construcción de esta nueva especie
-de números sobre los reales. 
+de números sobre los reales.
