--- a/AnalisisNE/Filtros.tex
+++ b/AnalisisNE/Filtros.tex
@@ -1,7 +1,7 @@
 \section{Filtros}
 
-Los filtros son, como se mencionó, son objetos de la teoría de conjuntos.
-Como su nombre indica, son objetos que filtran, de forma análoga a lo que
+Los filtros, como se mencionó, son objetos de la teoría de conjuntos,
+como su nombre indica, filtran de forma análoga a lo que
 puede hacer un colador. Para esta sección, se considerará $I$ como un
 conjunto no vacío, esto último es necesario para la definición de filtro.
 
