--- a/AnalisisNE/Filtros.tex
+++ b/AnalisisNE/Filtros.tex
@@ -6,15 +6,15 @@ puede hacer un colador. Para esta sección, se considerará $I$ como un
 conjunto no vacío, esto último es necesario para la definición de filtro.
 
 \begin{definition}\label{def:filtro}
-  Un filtro $\F$ sobre $I$, es un conjunto no vacío de subconjuntos de $I$.
-  $\F$ cumple las siguientes características:
+  Un filtro $\F$ sobre $I$ es un conjunto no vacío de subconjuntos de $I$
+  el cual cumple las siguientes características:
   \begin{enumerate}
     \item $\varnothing \not\in \F$
     \item $\Forall{A,B}[A,B \in \F]{A\cap B \in \F}$
     \item $\Forall{A,B}[A\in \F \land A \subseteq B]{B \in \F}$
   \end{enumerate}
 
-  Para esta sección, la letra $\F$ denotará un filtro sobre $I$
+  Para esta sección, la letra $\F$ denotará un filtro sobre $I$.
 \end{definition}
 
 Por ejemplo, considere el conjunto $X=\{a,b,c\}$. Un filtro $G$ sobre $X$
@@ -24,7 +24,7 @@ Nótese que por la definición de filtro, el conjunto sobre el que este se
 define, siempre debe ser un elemento del filtro.
 
 \begin{definition}
-  Sea $\mathcal{S}$, una colección de subconjuntos de $I$ tales que,
+  Sea $\mathcal{S}$ una colección de subconjuntos de $I$, tal que
   $\mathcal{S}$ cumpla la propiedad de las intersecciones finitas. Esto es,
   para toda colección finita de elementos de $S$, su intersección sea
   distinta de $\varnothing$. Se dice entonces que $\mathcal{S}$ es una
