--- a/AnalisisNE/Filtros.tex
+++ b/AnalisisNE/Filtros.tex
@@ -24,7 +24,7 @@ Nótese que por la definición de filtro, el conjunto sobre el que este se
 define, siempre debe ser un elemento del filtro.
 
 \begin{definition}
-  Sea $\mathcal{S}$ una colección de subconjuntos de $I$, tal que
+  Sea $\mathcal{S}$ una colección de subconjuntos de $I$ tal que
   $\mathcal{S}$ cumpla la propiedad de las intersecciones finitas. Esto es,
   para toda colección finita de elementos de $S$, su intersección sea
   distinta de $\varnothing$. Se dice entonces que $\mathcal{S}$ es una
@@ -32,8 +32,8 @@ define, siempre debe ser un elemento del filtro.
 \end{definition}
 
 \begin{definition}
-  Sea $\mathcal{B}$ una colección no vacía de subconjuntos de $I$ tales
-  que,
+  Sea $\mathcal{B}$ una colección no vacía de subconjuntos de $I$ tal
+  que
   \[
     \Forall{A,B}[A,B \in \mathcal{B}]{
       \Exists{C}[C\in\mathcal{B}]{C \subseteq A \cap B}
