--- a/AnalisisNE/Filtros.tex
+++ b/AnalisisNE/Filtros.tex
@@ -26,7 +26,7 @@ define, siempre debe ser un elemento del filtro.
 \begin{definition}
   Sea $\mathcal{S}$ una colección de subconjuntos de $I$ tal que
   $\mathcal{S}$ cumpla la propiedad de las intersecciones finitas. Esto es,
-  para toda colección finita de elementos de $S$, su intersección sea
+  para toda colección finita de elementos de $S$, su intersección es
   distinta de $\varnothing$. Se dice entonces que $\mathcal{S}$ es una
   sub-base para algun filtro sobre $I$.
 \end{definition}
@@ -50,7 +50,7 @@ sobre un conjunto.
 
 \begin{definition}[Relación de orden]
   Sea $\mathscr{F}$ el conjunto de filtros sobre $I$, la relación de contenencia
-  ordena parcialmente a $\mathscr{F}$, y entre dos elementos de define de la siguiente
+  ordena parcialmente a $\mathscr{F}$, y entre dos elementos se define de la siguiente
   manera:
 
   Un filtro $\F_1$ es \emph{más fino} que un filtro $\F_2$ cuando $\F_2 \subseteq \F_1$.
