--- a/AnalisisNE/Intro.tex
+++ b/AnalisisNE/Intro.tex
@@ -6,9 +6,9 @@ resultados sobre algún objeto de la teoría, como puede ser una
 función. La definición usual de límite es la conocida
 ``$\e$ , $\delta$''. Sin embargo, en los inicios del cálculo,
 Leibniz intentó fundamentar otra definición, la cual consiste en
-usar \emph{infinitesimales}, que son números infinitamente pequeños
-o infinitamente grandes. Dichos números debian comportarse,
-respectivamente, de la siguiente manera:
+usar \emph{infinitesimales} o \emph{hiperreales}, que son números
+infinitamente pequeños o infinitamente grandes. Dichos números debian
+comportarse, respectivamente, de la siguiente manera:
 un número infinitamente pequeño es menor que todo número real positivo
 pero mayor a $0$, y un número infinitamente grande es mayor que todo
 número real. Leibniz sostenía que dichos números debían mantener las
