--- a/AnalisisNE/SupEstructura.tex
+++ b/AnalisisNE/SupEstructura.tex
@@ -9,13 +9,13 @@ $n$-uplas se definen recursivamente de la siguiente manera:
   (a_1, \dots, a_n, a_{n+1}) &= ((a_1, \dots, a_n), a_{n+1})
 \end{align*}
 Se puede demostrar que $(a,b) \in A\times B \To
-(a,b) \in \Pts(\Pts(A \cup B))$. Debido a esto, es posible definir un
+(a,b) \in \Pts{\Pts{A \cup B}}$. Debido a esto, es posible definir un
 conjunto el cual contenga todas las relaciones entre números reales. Se
 define la colección $\R_n$ de la siguiente manera:
 \[
   \begin{siseq}[\{,\}]
     \R_0 &= \R\\
-    \R_{n+1} &= \Pts(\R_n)
+    \R_{n+1} &= \Pts{\bigcup_{k=1}^n \R_k}
   \end{siseq}
 \]
 
@@ -24,30 +24,51 @@ Se define entonces, la superestructura $\Rh$ por
 Los elementos de $\Rh$ serán llamados \emph{entidades} y los elementos
 de $\R$ serán llamados \emph{individuos}.
 
-\begin{lemma}~
+\begin{lemma}[Propiedades de $\R_n$]\label{lema:Rn}~
   \begin{enumerate}
+    \item $\Forall{n,m}[n,m\in\N \land n\leq m]{\R_{n+1} \subseteq \R_{m+1}}$
+    \item $\ds\Forall{n}[n\in\N]{\bigcup_{k=0}^n \R_k = \R_0 \cup \R_n}$
     \item $\Forall{n,m}[n,m\in\N \land n \leq m]{R_n \in \R_{m+1}}$
-    \item $\Forall{n,x,y}[n\in\N \land y\in\R_{n+1} \land x\in y]{x\in\R_n}$
+    \item $\Forall{n,x,y}[n\in\N \land y\in\R_{n+1} \land x\in y]{x\in\R_0\cup\R_n}$
   \end{enumerate}
 \end{lemma}
-\pagebreak
 \begin{demo}~
   \begin{enumerate}
+    \item Sean $n,m\in\N$ tales que $n\leq m$.
+          \begin{longderivation}<.9>
+              \res{x\in\R_{n+1}}\\
+            \equiv\\
+              \res{x\subseteq \bigcup_{k=0}^n \R_k}\\
+            \To\\
+              \res{x\subseteq \bigcup_{k=0}^{m}\R_k}\\
+            \equiv\\
+              \res{x\in\R_{m+1}}
+          \end{longderivation}
+    \item Sea $n\in\N$, si $n=0$ no hay algo que demostrar. Para $n\in\J$:
+          \begin{longderivation}<.9>
+              \res{x\in\bigcup_{k=0}^n \R_k}\\
+            \equiv\\
+              \res{ x\in \R_0 \lor x\in\bigcup_{k=1}^n \R_k }\\
+            \why{(i)}\\
+              \res{ x\in\R_0 \lor x\in\R_n }\\
+            \equiv\\
+              \res{x\in\R_0\cup\R_n}
+          \end{longderivation}
     \item Sean $n,m \in \N$ tales que $n \leq m$.
           \begin{longderivation}<.9>
-              \res{ \R_n \subseteq \R_m }\\
+              \res{ \R_n \subseteq \bigcup_{k=0}^m\R_k }\\
             \equiv\\
-              \res{\R_n \in \Pts(\R_m)}\\
+              \res{\R_n \in \Pts{\bigcup_{k=0}^m\R_k}}\\
             \equiv\\
               \res{ \R_n \in \R_{m+1} }
           \end{longderivation}
     \item Sean $n\in\N$, $y\in\R_{n+1}$ y $x\in y$.
           \begin{longderivation}<.9>
               \res{ x \in y \land y \in \R_{n+1} }\\
-            \equiv\\
-              \res{ x \in y \land y \subseteq \R_n }\\
+            \why{(i)}\\
+              \res{ x \in y \land y \subseteq \R_0\cup\R_n }\\
             \To\\
-              \res{ x \in \R_n }
+              \res{ x \in \R_0\cup\R_n }
           \end{longderivation}
   \end{enumerate}
 \end{demo}
